<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signUp"
                android:textAppearance="?textAppearanceHeadline5" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="32dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:gravity="start"
                android:hint="@string/lastname"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textDirection="locale" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/register_btn" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/login_btn"
                android:textAppearance="?textAppearanceBody1" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>