<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userInfo"
                android:textAppearance="?textAppearanceHeadline5" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="12dp"
                android:background="?selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_arrow_back_24" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="@string/lastname" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:hint="@string/phone"
                android:inputType="phone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="52dp"
                android:layout_marginVertical="16dp"
                android:text="@string/save" />

            <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:hint="@string/lastPassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:hint="@string/newPassword"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSavePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="52dp"
                android:layout_marginVertical="16dp"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>